--- a/events-server/templates/index.html
+++ b/events-server/templates/index.html
@@ -8,9 +8,12 @@
       }
 
       table, th, td{
-        border-collapse: collapse;
-        border: 1px;
+        border: 2px;
         text-align: center;
+      }
+
+      td {
+        margin-bottom: 20px;
       }
 
       #description {
