--- a/events-server/templates/index.html
+++ b/events-server/templates/index.html
@@ -33,6 +33,7 @@
           <th>Time</th>
           <th>Description</th>
           <th>Coordinates</th>
+          <th>Link</th>
           <th>More Info</th>
         </tr>
         {% for event in events %}
@@ -42,7 +43,15 @@
             <td id="date">{{ event.date }}</td>
             <td id="time">{{ event.time }}</td>
             <td id="description">{{ event.desc }}</td>
+            <td id="coord">
+              {% if event.coord %}
+                  {{ event.coord[0] }}, {{ event.coord[1] }}
+              {% else %}
+                  Not found
+              {% endif %}
+          </td>
             <td id="link"><a href="{{ event.link }}">Link</a></td>
+
           </tr>
         {% endfor %}
       </table>
