undoing test change

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TESTING DEPLOYMENT</title>
+    <title>Mac Events RSS Feed Reader</title>
     <style>
       body {
         font-size:medium;
